@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Now the engine automatically sorts the user-provided intensity_measure_types
   * Optimized the aggregation by tag
   * Fixed a bug with the binning when disaggregating around the date line
   * Fixed a prefiltering bug with complex fault sources: in some cases, blocks
